--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.0-android</version>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
